syntax = "proto3";

package proto;

option optimize_for = SPEED;

import "message_common.proto";

//WorkGroups messages

//Get list of work groups for user's account
//  @filter allows to show deleted wgs
message WorkGroupsListRequest {
    string session_id = 1;
    Filter filter = 2;
}

message WorkGroupsListResponse {
    int32 error_code = 1;
    repeated WorkGroupInfo workgroup_info_list = 2;
    int64 last_event_id = 3;
}


